<resources>
    <string name="app_name">Blog App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="create_act">Create Account</string>
    <string name="title_activity_post_list">PostListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>

    <string name="post_description_here">Post Description here</string>
    <string name="date_created">Date created:</string>
    <string name="todo">TODO</string>
    <string name="submit_text">Submit</string>
    <string name="fistName">First name</string>
    <string name="lastName">Last name</string>
</resources>